--- a/indexcopy.html
+++ b/indexcopy.html
@@ -377,8 +377,8 @@
                 <h3>Plant equipment manufacturer</h3>
               </a>
               -->
-              <a href="#exampleModal" class="stretched-link" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                data-toggle="modal">
+              <a href="#" class="stretched-link" data-toggle="modal" data-bs-target="#plantModal"
+                data-bs-toggle="modal">
                 <h3>Plant equipment manufacturer</h3>
               </a>
 
@@ -387,43 +387,41 @@
                 and cloud analytical applications with UK data laws. <br /><br />Implemented analytical security models,
                 lifecycle management process, user provisioning and authentication.
               </p>
-              <!-- Modal -->
-              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog modal-dialog-scrollable">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Plant equipment manufacturer</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      A global manufacturer based in the UK already had an established analytics team. I was bought in
-                      to see how we could
-                      push their use of data and analytics further, a directive from the Group Chief Information
-                      Officer. <br /><br />
-
-                      The first solution was a touch-based interactive dashboard that would allow management to
-                      interrogate the main service
-                      KPIs while VIPs were visiting. <br /><br />
-
-                      Presented on an 80-inch 4K screen, the success led to each director having their own dashboards
-                      based on the same
-                      principal (faceted filtering instead of hierarchical drilling). <br /><br />
-
-                      Another success was to help integrate a digital voice assistant (Alexa) with a SAP dashboard that
-                      was displayed on an 80
-                      sqm. 4K screen.
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
 
 
             </div>
           </div><!-- End Service Item -->
+          <!-- Modal -->
+          <div class="modal fade" id="plantModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Plant equipment manufacturer</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <p>A global manufacturer based in the UK already had an established
+                    analytics team. I was bought
+                    in to see how we could push their use of data and analytics further, a directive from the Group
+                    Chief Information Officer.</p>
+                  <p>
+                    The first solution was a touch-based interactive dashboard that would allow management to
+                    interrogate the main service KPIs while VIPs were visiting.</p>
+                  <p>
+                    Presented on an 80-inch 4K screen, the success led to each director having their own dashboards
+                    based on the same principal (faceted filtering instead of hierarchical drilling).</p>
+                  <p>
+                    Another success was to help integrate a digital voice assistant (Alexa) with a SAP dashboard
+                    that was displayed on an 80 sqm. 4K screen.
+                  </p>
+                </div>
+                <div class=" modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End of Modal -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item item-orange position-relative">
