Added image to modal

--- a/indexcopy.html
+++ b/indexcopy.html
@@ -400,6 +400,13 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
+
+                  <!-- Added images -->
+
+                  <img src="assets/img/portfolio/JCB250000MachinesTelematicsLive.jpg" class="img-fluid">
+
+                  <!-- End of images -->
+                  <p></p>
                   <p>A global manufacturer based in the UK already had an established
                     analytics team. I was bought
                     in to see how we could push their use of data and analytics further, a directive from the Group
