--- a/index.html
+++ b/index.html
@@ -372,7 +372,8 @@
                 </svg>
                 <i class="bi bi-megaphone"></i>
               </div>
-              <a href="plant-details.html" class="stretched-link">
+              <a href="#" class="stretched-link" data-toggle="modal" data-bs-target="#plantModal"
+                data-bs-toggle="modal">
                 <h3>Plant equipment manufacturer</h3>
               </a>
               <p>Developed a fully digital monthly reporting pack replacing a three-day process.
@@ -382,6 +383,42 @@
               </p>
             </div>
           </div><!-- End Service Item -->
+          <!-- Modal -->
+          <div class="modal fade" id="plantModal" tabindex="-1" aria-labelledby="plantModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3 class="modal-title" id="plantModalLabel">Plant equipment manufacturer</h3>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                  <!-- Added images -->
+                  <img src="assets/img/portfolio/JCB250000MachinesTelematicsLive.jpg" class="img-fluid">
+                  <!-- End of images -->
+                  <p></p>
+                  <p>A global manufacturer based in the UK already had an established
+                    analytics team. I was bought
+                    in to see how we could push their use of data and analytics further, a directive from the Group
+                    Chief Information Officer.</p>
+                  <p>
+                    The first solution was a touch-based interactive dashboard that would allow management to
+                    interrogate the main service KPIs while VIPs were visiting.</p>
+                  <p>
+                    Presented on an 80-inch 4K screen, the success led to each director having their own dashboards
+                    based on the same principal (faceted filtering instead of hierarchical drilling).</p>
+                  <p>
+                    Another success was to help integrate a digital voice assistant (Alexa) with a SAP dashboard
+                    that was displayed on an 80 sqm. 4K screen.
+                  </p>
+                </div>
+                <div class=" modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End of Modal -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item item-orange position-relative">
@@ -393,7 +430,8 @@
                 </svg>
                 <i class="bi bi-globe"></i>
               </div>
-              <a href="migration-details.html" class="stretched-link">
+              <a href="#" class="stretched-link" data-toggle="modal" data-bs-target="#migrationModal"
+                data-bs-toggle="modal">
                 <h3>SAP/Business Objects - Global Migration Team</h3>
               </a>
               <p>Worked in all elements of migration activities, including product development, training, and
@@ -403,6 +441,63 @@
                 best practises and techniques.</p>
             </div>
           </div><!-- End Service Item -->
+          <!-- Modal -->
+          <div class="modal fade" id="migrationModal" tabindex="-1" aria-labelledby=migrationModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3 class="modal-title" id="migrationModalLabel">SAP/Business Objects - Global Migration Team</h3>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                  <!-- Added images -->
+                  <img src="assets/img/portfolio/JasonGoodmanUnsplashImage.jpg" class="img-fluid">
+                  <!-- End of images -->
+                  <p></p>
+                  <p>
+                    In my understanding of the upcoming release while on secondment with Business Objects product
+                    management, I mentioned
+                    that the upgrade tool they were hoping for would be easier than the complexity of moving from the
+                    old
+                    platform to the
+                    newer one.
+                  </p>
+                  <p>
+                    As a result, I created protocols, resources, best practices, and instructional materials to help
+                    guarantee that clients
+                    could migrate successfully. I was one of two technical leads on a multinational team that was
+                    established.
+                  </p>
+                  <p>
+                    I travelled throughout North America, Europe, and Asia training consultants in best practices, and I
+                    gave
+                    presentations at
+                    numerous user and partner conferences. Additionally, it assisted in updating the questions for the
+                    SAP
+                    certification
+                    test.
+                  </p>
+                  <p>
+                    Regardless of who was performing the migration, Key Account customers would naturally receive extra
+                    attention from me as
+                    I verified their plans and activities.
+                  </p>
+                  <p>
+                    I moved to the UK consulting team after the team was disbanded following the successful migrations
+                    and
+                    upgrades of
+                    multiple releases.
+                  </p>
+                </div>
+                <div class=" modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End of Modal -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item item-teal position-relative">
@@ -414,7 +509,9 @@
                 </svg>
                 <i class="bi bi-easel"></i>
               </div>
-              <a href="government-details.html" class="stretched-link">
+              <!-- <a href="government-details.html" class="stretched-link"> -->
+              <a href="#" class="stretched-link" data-toggle="modal" data-bs-target="#governmentModal"
+                data-bs-toggle="modal">
                 <h3>UK Government Ministry</h3>
               </a>
               <p>Developed a fully digital monthly reporting pack replacing a three-day process. <br /><br />Designed
@@ -423,6 +520,80 @@
                 management process, user provisioning and authentication. </p>
             </div>
           </div><!-- End Service Item -->
+          <!-- Modal -->
+          <div class="modal fade" id="governmentModal" tabindex="-1" aria-labelledby="governmentModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3 class="modal-title" id="governmentModalLabel">UK Government Ministry</h3>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                  <!-- Added images -->
+                  <img src="assets/img/portfolio/AnalyticElectronicGreyPhoto.jpg" class="img-fluid">
+                  <!-- End of images -->
+                  <p></p>
+                  <p>
+                    For each of its directorates, every UK government ministry creates a report pack every month. These
+                    were
+                    created by
+                    combining Excel and manual report analysis, after which the content was copied and pasted into
+                    PowerPoint for
+                    distribution. While some recipients would have the results printed for them, others would view them
+                    on a
+                    laptop.
+                  </p>
+                  <p>
+                    It would take roughly two days to produce each pack, allowing for the inclusion of pertinent
+                    commentary
+                    and meeting the
+                    strict month-end closure deadlines.
+                  </p>
+                  <p>
+                    The Ministry's SAP ERP systems would serve as the primary source of the necessary data.
+                  </p>
+                  <p>
+                    I used Web Intelligence (a component of SAP BusinessObjects Enterprise) to come up with a solution
+                    that
+                    would reuse the
+                    rules that were already hidden in the Excel workbooks to generate the report content automatically.
+                    Additionally, the
+                    necessary commentary was typed straight into the report, and the finished product was exported to
+                    PDF
+                    format for
+                    sharing.
+                  </p>
+                  <p>
+                    Each report pack would then be updated, examined, verified, and finished in a few hours, not
+                    including
+                    waiting for the
+                    commentary.
+                  </p>
+                  <p>
+                    Naturally, a great deal of time was saved, and the recipients were not aware of the modifications.
+                    This
+                    began the
+                    strategic shift to improve the Ministry's capacity and response time to all requests by combining
+                    data
+                    modelling with
+                    reporting and analysis.
+                  </p>
+                  <p>
+                    In subsequent work, I assisted with the analytics strategy, which included using cloud SaaS apps and
+                    adhering to data
+                    governance and sovereignty regulations set forth by the UK government.
+                  </p>
+                </div>
+                <div class=" modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End of Modal -->
+
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item item-red position-relative">
@@ -434,7 +605,8 @@
                 </svg>
                 <i class="bi bi-lungs"></i>
               </div>
-              <a href="healthcare-details.html" class="stretched-link">
+              <a href="#" class="stretched-link" data-toggle="modal" data-bs-target="#healthcareModal"
+                data-bs-toggle="modal">
                 <h3>Multinational healthcare company</h3>
               </a>
               <p>Developed the BICC team with technical and analytical skills to manage the BI Platform.
@@ -445,6 +617,67 @@
               </p>
             </div>
           </div><!-- End Service Item -->
+          <!-- Modal -->
+          <div class="modal fade" id="healthcareModal" tabindex="-1" aria-labelledby="healthcareModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3 class="modal-title" id="healthcareModalLabel">Multinational healthcare company</h3>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                  <!-- Added images -->
+                  <img src="assets/img/portfolio/healthcare1.jpg" class="img-fluid">
+                  <!-- End of images -->
+                  <p></p>
+                  <p>
+                    As part of their investment in SAP Analytics solutions, the Swiss-based client had put together a
+                    team
+                    to be their first
+                    BI Competency Centre. A colleague had already visited them and taken them through roles,
+                    responsibilities, and
+                    structure.
+                  </p>
+                  <p>
+                    I worked with them to teach them the technical skills to be self-sufficient.
+                  </p>
+                  <p>
+                    Working with them, I developed their security model, ways of working, life cycle management
+                    processes,
+                    and development
+                    best practices. Each considering the stringent compliance rules they abide by.
+                  </p>
+                  <p>
+                    We also worked through an upgrade to a newer major release. At this time, there were over 86k global
+                    users.
+                  </p>
+                  <p>
+                    Working with SAP Product Managers, we tested and provided feedback to the upgrade tools so they
+                    could be
+                    reliable and
+                    trusted for a migration of this size.
+                  </p>
+                  <p>
+                    We ran the migration in 4 increments, one month apart, allowing for BAU. Each period of downtime was
+                    limited to 44
+                    hours.
+                  </p>
+                  <p>
+                    As well as the successful outcomes, the designs, models, scripts, and plans became SAP best
+                    practices
+                    for SAP
+                    BusinessObjects Enterprise.
+                  </p>
+                </div>
+                <div class=" modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End of Modal -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item item-indigo position-relative">
@@ -456,7 +689,8 @@
                 </svg>
                 <i class="bi bi-rocket-takeoff"></i>
               </div>
-              <a href="aerospace-details.html" class="stretched-link">
+              <a href="#" class="stretched-link" data-toggle="modal" data-bs-target="#aerospaceModal"
+                data-bs-toggle="modal">
                 <h3>Multinational aerospace and defence company</h3>
               </a>
               <p>Created and deployed authentication and security models in line with corporate policies.
@@ -466,6 +700,58 @@
               </p>
             </div>
           </div><!-- End Service Item -->
+          <!-- Modal -->
+          <div class="modal fade" id="aerospaceModal" tabindex="-1" aria-labelledby="aerospaceModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3 class="modal-title" id="aerospaceModalLabel">Multinational healthcare company</h3>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                  <!-- Added images -->
+                  <img src="assets/img/portfolio/BriceCooperUnsplash.jpg" class="img-fluid">
+                  <!-- End of images -->
+                  <p></p>
+                  <p>
+                    I worked on a team that created a new global dashboard with eight indicators for each of the 54 KPIs
+                    for
+                    the board.
+                    Careful data modelling was necessary for such a design to achieve satisfactory performance for an
+                    interactive solution.
+                  </p>
+                  <p>
+                    I was heavily involved in the performance testing, using scripting and human input scenarios. Being
+                    able
+                    to monitor the
+                    application and client at the same time proved paramount to finding efficiencies.
+                  </p>
+                  <p>
+                    I also developed and deployed their application security model in line with strict guidelines,
+                    covering
+                    export control
+                    licenses, user access points, etc.
+                  </p>
+                  <p>
+                    As part of the rollout, I created and delivered user training for both maintenance and users of the
+                    solution.
+                  </p>
+                  <p>
+                    In order to guarantee a coordinated effort from all departments, the project was completed in
+                    collaboration with their
+                    current suppliers.
+                  </p>
+                </div>
+                <div class=" modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End of Modal -->
+
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item item-pink position-relative">
