--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
             <div class="modal-dialog modal-dialog-scrollable">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h3 class="modal-title" id="aerospaceModalLabel">Multinational healthcare company</h3>
+                  <h3 class="modal-title" id="aerospaceModalLabel">Multinational aerospace and defence company</h3>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
