added hand icon

--- a/index.html
+++ b/index.html
@@ -359,7 +359,6 @@
       </div><!-- End Section Title -->
 
       <div class="container">
-
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="80">
@@ -381,6 +380,8 @@
                 and cloud analytical applications with UK data laws. <br /><br />Implemented analytical security models,
                 lifecycle management process, user provisioning and authentication.
               </p>
+              <br />
+              <i class="bi bi-hand-index"></i>
             </div>
           </div><!-- End Service Item -->
           <!-- Modal -->
@@ -439,6 +440,8 @@
                 at many User Conferences, Marketing and Customer Events. <br /><br />Developed public training courses
                 Worked with strategic customers ensuring successful migration projects. <br /><br />Developed global
                 best practises and techniques.</p>
+              <br />
+              <i class="bi bi-hand-index"></i>
             </div>
           </div><!-- End Service Item -->
           <!-- Modal -->
@@ -518,6 +521,9 @@
                 analytics strategy in line with ministerial policies. <br /><br />Evaluated newer on-premise and cloud
                 analytical applications with UK data laws. <br /><br />Implemented analytical security models, lifecycle
                 management process, user provisioning and authentication. </p>
+              <br />
+              <i class="bi bi-hand-index"></i>
+
             </div>
           </div><!-- End Service Item -->
           <!-- Modal -->
@@ -615,6 +621,9 @@
                 strict compliance rules. <br /><br />The single global analytics platform was used by 86k users and over
                 270 different projects.
               </p>
+              <br />
+              <i class="bi bi-hand-index"></i>
+
             </div>
           </div><!-- End Service Item -->
           <!-- Modal -->
@@ -698,6 +707,9 @@
                 being developed, in conjunction with other suppliers. <br /><br />Developed and provided training to key
                 personnel ensuring continued success of the project.
               </p>
+              <br />
+              <i class="bi bi-hand-index"></i>
+
             </div>
           </div><!-- End Service Item -->
           <!-- Modal -->
