--- a/index.html
+++ b/index.html
@@ -121,23 +121,24 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-three-dots-vertical"></i> <strong>Date of Birth:</strong> <span>6th May
-                      1970</span></li>
+                  <!-- <li><i class="bi bi-three-dots-vertical"></i> <strong>Date of Birth:</strong> <span> 6th May
+                      1970</span></li> -->
                   <!--                  <li><i class="bi bi-three-dots-vertical"></i> <strong>Website:</strong> <span>www.example.com</span></li>-->
                   <!--                  <li><i class="bi bi-three-dots-vertical"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>-->
                   <li><i class="bi bi-three-dots-vertical"></i> <strong>City:</strong> <span>Stafford, United
                       Kingdom</span>
                   </li>
+                  <li><i class="bi bi-three-dots-vertical"></i> <strong>Age:</strong> <span>54</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-three-dots-vertical"></i> <strong>Age:</strong> <span>54</span></li>
                   <!--                  <li><i class="bi bi-three-dots-vertical"></i> <strong>Degree:</strong> <span>Master</span></li>-->
                   <li><i class="bi bi-three-dots-vertical"></i> <strong>Email:</strong>
                     <span>1timnightingale@gmail.com</span>
                   </li>
-                  <!--<li><i class="bi bi-three-dots-vertical"></i> <strong>Contract:</strong> <span>Available</span></li>-->
+                  <li><i class="bi bi-three-dots-vertical"></i> <strong>Work status:</strong> <span>Available</span>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -166,9 +167,15 @@
         <div class="row skills-content skills-animation">
 
           <div class="col-lg-6">
-
+            <!-- use either percentage ration of text
+ 0-20% Novice
+ 21-40% Advanced beginner
+ 41-60% Competent 
+ 61-80% Proficient 
+ 81-100% Expert
+ -->
             <div class="progress">
-              <span class="skill"><span>Solution Design</span> <i class="val">90%</i></span>
+              <span class="skill"><span>Solution Design</span> <i class="val">Expert</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -176,7 +183,7 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Analytics Development</span> <i class="val">80%</i></span>
+              <span class="skill"><span>Analytics Development</span> <i class="val">Proficient</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -184,7 +191,7 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Systems Integration</span> <i class="val">75%</i></span>
+              <span class="skill"><span>Systems Integration</span> <i class="val">Proficient</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -196,7 +203,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>Data Engineering</span> <i class="val">75%</i></span>
+              <span class="skill"><span>Data Engineering</span> <i class="val">Proficient</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -204,7 +211,7 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Presentation &amp; communication</span> <i class="val">90%</i></span>
+              <span class="skill"><span>Presentation &amp; communication</span> <i class="val">Expert</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -212,7 +219,7 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Business Analysis</span> <i class="val">90%</i></span>
+              <span class="skill"><span>Business Analysis</span> <i class="val">Expert</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
