--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="row skills-content skills-animation">
 
           <div class="col-lg-6">
-            <!-- use either percentage ration of text
+            <!-- use either percentage ratio or text
  0-20% Novice
  21-40% Advanced beginner
  41-60% Competent 
