--- a/2.0/index.html
+++ b/2.0/index.html
@@ -111,7 +111,7 @@
         <div class="masthead-content">
             <div class="container">
                 <h1 class="masthead-heading mb-0">Tim Nightingale</h1>
-                <h2 class="masthead-subheading mb-0">Analytics Architect</h2>
+                <h2 class="masthead-subheading mb-0"><strong>Adaptive Innovator</strong></h2>
                 <figure style="margin-top: 16px;padding: 10px;border-style: solid;border-color: var(--bs-primary);">
                     <blockquote class="blockquote">
                         <p class="mb-0">PowerPoint is like being trapped in the style of early Egyptian flatland cartoons rather than using the more effective tools of Renaissance visual representation.</p>
