--- a/2.0/index.html
+++ b/2.0/index.html
@@ -135,10 +135,10 @@
         <div class="bg-circle-4 bg-circle"></div>
     </header>
     <section id="about">
-        <div class="container">
+        <div class="container py-4 py-xl-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 align-self-start order-lg-2">
-                    <div class="p-5"><img class="rounded-circle img-fluid" src="assets/img/Tim-Headshot3.jpg" style="transform: scale(0.80);backdrop-filter: blur(0px);-webkit-backdrop-filter: blur(0px);">
+                    <div class="p-4"><img class="rounded-circle img-fluid" src="assets/img/Tim-Headshot3.jpg" style="transform: scale(0.80);backdrop-filter: blur(0px);-webkit-backdrop-filter: blur(0px);">
                         <div class="row" style="margin-bottom: 1rem;text-align: center;">
                             <div class="col"><a class="btn btn-outline-primary" role="button" target="_blank" href="https://www.linkedin.com/in/1timnightingale" style="width: 8.5rem;"><span>LinkedIn<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-linkedin" style="margin-left: 2rem;">
                                             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401m-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4"></path>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
-                    <div class="p-5">
+                    <div class="p-4">
                         <h2><strong>An expert in data architecture and analytics.</strong></h2>
                         <p style="margin-bottom: 40px;">I have over 24 years experience delivering solutions, with a diverse background in data and analytics across various industries, including medical, telephony, logistics, pharma, retail, manufacturing, and financial sectors. ​ <br><br>In all projects I emphasise the need of having data that is of high quality and being secure. <br><br>I have developed global best practices in migration and security model designs and contributed to SAP certification exams. ​ I have led and supported analytical projects, designed training modules, and presented at numerous conferences. ​ <br><br>I am passionate about understanding how things work and have explored various fields such as eCommerce, full stack development, and LoRaWAN IoT. ​ I enjoy sharing my knowledge to help others learn and grow.&nbsp;</p>
                         <div id="solutoionDesign"><span>Solution Design</span>
@@ -198,7 +198,7 @@
         </div>
     </section>
     <section id="resume">
-        <div style="height: 4em;"></div>
+        <div style="height: 4rem;"></div>
         <div class="container py-4 py-xl-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-1">
