--- a/2.0/index.html
+++ b/2.0/index.html
@@ -14,6 +14,12 @@
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Tim Nightingale</title>
+    <meta name="twitter:description" content="Expert in data architecture and analytics with over 24 years experience. ">
+    <meta name="twitter:card" content="summary">
+    <meta property="og:type" content="website">
+    <meta name="twitter:title" content="Tim Nightingale">
+    <meta name="description" content="Expert in data architecture and analytics with over 24 years experience. ">
+    <meta property="og:image" content="assets/img/Tim-Headshot3.jpg">
     <script>
         (function() {
 
