--- a/2.0/index.html
+++ b/2.0/index.html
@@ -216,7 +216,7 @@
                                 <div class="accordion-collapse collapse show item-1" role="tabpanel" data-bs-parent="#accordion">
                                     <div class="accordion-body">
                                         <h5>Analytics Architect</h5>
-                                        <p class="mb-0">Developing integrated solutions with newer technologies and business models, including LoRaWAN, ecommerce and transport logistics, microcontroller design and IoT, MQTT, web application development, document databases, audio visual broadcasting and editing.<br><br>Solutions include a field based monitoring system for the orientation of farm gates, using LoRaWAN radio communication, encoding and compression of data (56 bytes per message), and no moving parts (switches etc...).&nbsp;</p>
+                                        <p class="mb-0">Developing integrated solutions with newer technologies and business models, including LoRaWAN, ecommerce and transport logistics, microcontroller design and IoT, MQTT, web application development, document databases, audio visual broadcasting and editing.<br><br>Solutions include a field based monitoring system for the orientation of farm gates (open, closed or damaged) using LoRaWAN radio communication, encoding and compression of data (56 bytes per message), and no moving parts (switches etc...).&nbsp;</p>
                                     </div>
                                 </div>
                             </div>
@@ -251,7 +251,7 @@
                                 <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion .item-5" aria-expanded="false" aria-controls="accordion .item-5">Early Careers</button></h2>
                                 <div class="accordion-collapse collapse item-5" role="tabpanel" data-bs-parent="#accordion">
                                     <div class="accordion-body">
-                                        <p class="mb-0">I spent 10 years working within the hospitality and licesed trade industry, giving me valuable insights into business management as customer services. <br><br>Working in all levels of the industry I managed high turnover and profitable premises, winning three national promotions. Understanding the importance of analytics, I transferred into a Head Office role looking after 22 premises. <br><br><br>I also spent my younger years working in the Management Information department of a regional newspaper, producing reporting around advertising sales, bonus schemes, press run times and weekly management packs.</p>
+                                        <p class="mb-0">I spent 10 years working within the hospitality and licensed trade industry, giving me valuable insights into business management as customer services. <br><br>Working in all levels of the industry I managed high turnover and profitable premises, winning three national promotions. Understanding the importance of analytics, I transferred into a Head Office role looking after 22 premises. <br><br><br>I also spent my younger years working in the Management Information department of a regional newspaper, producing reporting around advertising sales, bonus schemes, press run times and weekly management packs.</p>
                                     </div>
                                 </div>
                             </div>
