--- a/2.0/index.html
+++ b/2.0/index.html
@@ -105,6 +105,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&amp;display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="assets/css/Lightbox-Gallery-baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/Projects-Grid-Horizontal-images.css">
     <link rel="stylesheet" href="assets/css/resumeTN.css">
@@ -207,7 +208,7 @@
         <div style="height: 4rem;"></div>
         <div class="container py-4 py-xl-5">
             <div class="row align-items-center">
-                <div class="col-lg-6 order-lg-1">
+                <div class="col-lg-6 order-lg-1" data-aos="zoom-in-up" data-aos-once="true">
                     <div class="col">
                         <h2 class="display-4">Resume</h2>
                         <div class="accordion" role="tablist" id="accordion">
@@ -266,7 +267,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 order-lg-2">
+                <div class="col-lg-6 order-lg-2" data-aos="zoom-in-up" data-aos-once="true">
                     <div class="p-5">
                         <lottie-player class="rounded-circle img-fluid" src="assets/js/resumeAnimation.json" mode="normal" autoplay="" loop=""></lottie-player>
                     </div>
@@ -283,7 +284,7 @@
                 </div>
             </div>
             <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                <div class="col">
+                <div class="col" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="300" data-aos-once="true">
                     <div class="card">
                         <lottie-player class="d-block card-img-top w-100 fit-cover" src="assets/js/dashboardAnimation.json" mode="normal" autoplay="" loop="" style="transform: scale(0.90);"></lottie-player>
                         <div class="card-body p-4">
@@ -292,7 +293,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="300" data-aos-once="true">
                     <div class="card">
                         <lottie-player class="d-block card-img-top w-100 fit-cover" src="assets/js/aeroAnimation.json" mode="normal" autoplay="" loop="" style="transform: scale(0.95);"></lottie-player>
                         <div class="card-body p-4">
@@ -301,7 +302,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="300" data-aos-once="true">
                     <div class="card">
                         <lottie-player class="d-block card-img-top w-100 fit-cover" src="assets/js/migrationAnimation.json" mode="normal" autoplay="" loop="" style="transform: scale(0.90);"></lottie-player>
                         <div class="card-body p-4">
@@ -310,7 +311,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="300" data-aos-once="true">
                     <div class="card">
                         <lottie-player class="d-block card-img-top w-100 fit-cover" src="assets/js/healthAnimation.json" mode="normal" autoplay="" loop="" style="padding-top: 2rem;"></lottie-player>
                         <div class="card-body p-4">
@@ -319,7 +320,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="300" data-aos-once="true">
                     <div class="card">
                         <lottie-player class="d-block card-img-top w-100 fit-cover" src="assets/js/processAnimation.json" mode="normal" autoplay="" loop="" style="transform: scale(1.10);"></lottie-player>
                         <div class="card-body p-4">
@@ -341,29 +342,29 @@
                 </div>
             </div>
             <div class="row gx-2 gy-2 row-cols-2 row-cols-md-3 row-cols-xl-4 photos" data-bss-baguettebox="">
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/Alexa2-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/Arduino-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/AWS-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/Azure-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/Confluent-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/Docker-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/GoogleCloud-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/Grafana-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/Kafka-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/MongoDB-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/MQTT-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/MySQL-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/NodeJS-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/NodeRed-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/Notion-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/OBS-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/Office-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/Oracle-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/PowerBI-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/React-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/SAP-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/SQLServer-logo-p.png"></div>
-                <div class="col align-self-center item"><img class="img-fluid" src="assets/img/TheThingsNetwork-logo-RGB-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Alexa2-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Arduino-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/AWS-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Azure-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Confluent-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Docker-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/GoogleCloud-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Grafana-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Kafka-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/MongoDB-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/MQTT-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/MySQL-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/NodeJS-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/NodeRed-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Notion-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/OBS-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Office-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Oracle-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/PowerBI-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/React-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/SAP-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/SQLServer-logo-p.png"></div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600" data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/TheThingsNetwork-logo-RGB-p.png"></div>
             </div>
         </div>
     </section>
@@ -373,7 +374,9 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@lottiefiles/lottie-player@1.5.7/dist/lottie-player.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/Lightbox-Gallery-baguetteBox.min.js"></script>
     <script src="assets/js/Lightbox-Gallery.js"></script>
 </body>
