--- a/2.0/index.html
+++ b/2.0/index.html
@@ -382,7 +382,7 @@
     </section>
     <footer class="py-5" style="border-top: 1px solid var(--bs-secondary) ;">
         <div class="container">
-            <p class="text-center text-white m-0 small">Copyright&nbsp;© Tim Nightingale 2024</p>
+            <p class="text-center m-0 small">Copyright&nbsp;© Tim Nightingale 2024</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
