--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-7E91BWQKNN');
+        gtag('config', 'G-KE3HGSZ4T1');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Tim Nightingale</title>
@@ -227,7 +227,8 @@
                             designed training modules, and presented at numerous conferences. ​ <br><br>I am passionate
                             about understanding how things work and have explored various fields such as eCommerce, full
                             stack development, and LoRaWAN IoT. ​ I enjoy sharing my knowledge to help others learn and
-                            grow.&nbsp;</p>
+                            grow.&nbsp;
+                        </p>
                         <div id="solutoionDesign"><span>Solution Design</span>
                             <div class="progress border rounded-pill">
                                 <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
