--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-KE3HGSZ4T1');
+        gtag('config', 'G-7E91BWQKNN');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Tim Nightingale</title>
