--- a/index.html
+++ b/index.html
@@ -608,6 +608,9 @@
                     data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/MySQL-logo-p.png">
                 </div>
                 <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
+                    data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/n8n-logo.png">
+                </div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
                     data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/NodeJS-logo-p.png">
                 </div>
                 <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
