--- a/2.0/index.html
+++ b/2.0/index.html
@@ -227,7 +227,8 @@
                             designed training modules, and presented at numerous conferences. ​ <br><br>I am passionate
                             about understanding how things work and have explored various fields such as eCommerce, full
                             stack development, and LoRaWAN IoT. ​ I enjoy sharing my knowledge to help others learn and
-                            grow.&nbsp;</p>
+                            grow.&nbsp;
+                        </p>
                         <div id="solutoionDesign"><span>Solution Design</span>
                             <div class="progress border rounded-pill">
                                 <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
@@ -605,6 +606,9 @@
                 </div>
                 <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
                     data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/MySQL-logo-p.png">
+                </div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
+                    data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/n8n-logo-p.png">
                 </div>
                 <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
                     data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/NodeJS-logo-p.png">
