--- a/index.html
+++ b/index.html
@@ -585,6 +585,9 @@
                     data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Docker-logo-p.png">
                 </div>
                 <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
+                    data-aos-delay="450" data-aos-once="true"><img class="img-fluid" src="assets/img/Figma-logo.png">
+                </div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
                     data-aos-delay="450" data-aos-once="true"><img class="img-fluid"
                         src="assets/img/GoogleCloud-logo-p.png"></div>
                 <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
