--- a/index.html
+++ b/index.html
@@ -637,6 +637,10 @@
                 </div>
                 <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
                     data-aos-delay="450" data-aos-once="true"><img class="img-fluid"
+                        src="assets/img/snowflake-logo.png">
+                </div>
+                <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
+                    data-aos-delay="450" data-aos-once="true"><img class="img-fluid"
                         src="assets/img/SQLServer-logo-p.png"></div>
                 <div class="col align-self-center item" data-aos="zoom-in-up" data-aos-duration="600"
                     data-aos-delay="450" data-aos-once="true"><img class="img-fluid"
