--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         </div>
                         <div class="row" style="text-align: center;">
                             <div class="col"><a class="btn btn-outline-primary" role="button" target="_blank"
-                                    href="https://1timnightingale.github.io/downloads/Tim NightingaleCV.pdf"
+                                    href="https://1timnightingale.github.io/downloads/TimNightingaleCV.pdf"
                                     style="width: 8.5rem;"><span>Resume<svg xmlns="http://www.w3.org/2000/svg"
                                             width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16"
                                             class="bi bi-file-earmark-pdf" style="margin-left: 2rem;">
