--- a/index.html
+++ b/index.html
@@ -218,15 +218,24 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-4">
                         <h2><strong>An expert in data architecture and analytics.</strong></h2>
-                        <p style="margin-bottom: 40px;">Throughout my career, I have analysed diverse datasets, from
-                            beverage sales in nightclubs to complex medical data in
-                            consulting roles. <br><br>My experience spans multiple sectors, including logistics,
-                            pharmaceuticals, advertising, and retail,
-                            allowing me to develop a comprehensive understanding of how to leverage data for strategic
-                            advantage. <br><br>I have
-                            successfully integrated technologies such as digital voice assistants with video wall
-                            dashboards and IoT data, creating
-                            innovative solutions that enhance data usability and audience engagement.&nbsp;
+                        <p style="margin-bottom: 40px;">As a seasoned Business Analyst with a passion for transforming
+                            data into strategic insights, I specialise in
+                            requirements gathering and agile delivery. My expertise spans designing robust data
+                            analytics architectures on platforms
+                            like SAP, Microsoft Azure, and AWS, always with a focus on aligning solutions to real
+                            business needs.
+                            <br><br>
+                            I thrive in collaborative, fast-paced environments, drawing on deep experience in systems
+                            integration and business
+                            intelligence tools such as SAP BusinessObjects, Tableau, and Power BI. My technical toolkit
+                            includes Python, C++,
+                            NodeJS, and a range of SQL and NoSQL databases, enabling me to craft efficient, scalable
+                            solutions that drive
+                            organisational growth.
+                            <br><br>
+                            I am committed to continuous learning and enjoy bridging the gap between technology and
+                            business, ensuring that every
+                            project delivers meaningful, actionable results.&nbsp;
                         </p>
                         <div id="solutoionDesign"><span>Solution Design</span>
                             <div class="progress border rounded-pill">
