--- a/index.html
+++ b/index.html
@@ -424,6 +424,27 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed"
+                                        type="button" data-bs-toggle="collapse" data-bs-target="#accordion .item-6"
+                                        aria-expanded="false" aria-controls="accordion .item-6">Education</button></h2>
+                                <div class="accordion-collapse collapse item-6" role="tabpanel"
+                                    data-bs-parent="#accordion">
+                                    <div class="accordion-body">
+                                        <p class="mb-0">
+                                            <strong>A Level:</strong> Computer Studies<br>
+                                            <strong>Certifications:</strong> SAP Certified Professional<br>
+                                            Contributed to SAP certification exam development<br>
+                                            Various online learning, including Snowflake<br>
+                                            <strong>Continuous Learning:</strong> Continuously update my skills through
+                                            online courses, industry research, and
+                                            hands-on experimentation with emerging technologies in analytics and cloud
+                                            platforms.
+                                            &nbsp;
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
