--- a/index.html
+++ b/index.html
@@ -426,16 +426,16 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed"
-                                        type="button" data-bs-toggle="collapse" data-bs-target="#accordion .item-6"
-                                        aria-expanded="false" aria-controls="accordion .item-6">Education</button></h2>
+                                        type="button" data-bs-toggle="collapse" data-bs-target="#accordion .item-7"
+                                        aria-expanded="false" aria-controls="accordion .item-7">Education</button></h2>
                                 <div class="accordion-collapse collapse item-6" role="tabpanel"
                                     data-bs-parent="#accordion">
                                     <div class="accordion-body">
                                         <p class="mb-0">
-                                            <strong>A Level:</strong> Computer Studies<br>
+                                            <strong>A Level:</strong> Computer Studies<br><br>
                                             <strong>Certifications:</strong> SAP Certified Professional<br>
-                                            Contributed to SAP certification exam development<br>
-                                            Various online learning, including Snowflake<br>
+                                            Contributed to SAP certification exam development<br><br>
+                                            Various online learning, including Snowflake<br><br>
                                             <strong>Continuous Learning:</strong> Continuously update my skills through
                                             online courses, industry research, and
                                             hands-on experimentation with emerging technologies in analytics and cloud
