--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <hr class="section-divider">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed"
                                         type="button" data-bs-toggle="collapse" data-bs-target="#accordion .item-7"
