--- a/index.html
+++ b/index.html
@@ -424,11 +424,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <hr class="section-divider">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed"
                                         type="button" data-bs-toggle="collapse" data-bs-target="#accordion .item-7"
-                                        aria-expanded="false" aria-controls="accordion .item-7">Education</button></h2>
+                                        aria-expanded="false" aria-controls="accordion .item-7"><span
+                                            class="education-icon">🎓</span>Education</button></h2>
                                 <div class="accordion-collapse collapse item-7" role="tabpanel"
                                     data-bs-parent="#accordion">
                                     <div class="accordion-body">
