add icon and driving

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" sizes="910x613" href="/TNCropped.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tim Nightingale | Analytics Architect</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -91,22 +91,23 @@
                 <h4>Global Scale & Governance</h4>
                 <p>Built and governed a global SAP analytics hub for a Life Sciences enterprise (86,000+ users),
                   establishing audit-ready controls, KPI alignment standards, and role-based security that scaled
-                  without surprises. Defined globally recognised best practices for security modelling and lifecycle
+                  without surprises. </p>
+                <p>Defined globally recognised best practices for security modelling and lifecycle
                   management.</p>
               </div>
               <div class="impact-card glass-card">
                 <div class="impact-icon">📊</div>
                 <h4>Executive Decision Hubs</h4>
                 <p>Designed executive analytics hubs across Plant Manufacturing, Aerospace, and Government—touch-screen
-                  and voice-enabled dashboards with consolidated KPIs—accelerating real-time decision-making. Developed
-                  monthly reporting solutions that cut completion time by over 93%.</p>
+                  and voice-enabled dashboards with consolidated KPIs—accelerating real-time decision-making. </p>
+                <p>Developed monthly reporting solutions that cut completion time by over 93%. </p>
               </div>
               <div class="impact-card glass-card">
                 <div class="impact-icon">🚀</div>
                 <h4>Migration Leadership</h4>
                 <p>Led global SAP BusinessObjects migrations, authoring repeatable playbooks, rescuing 5 key global
-                  account projects, and training 200+ consultants worldwide. Shared process innovations at US and EMEA
-                  industry conferences.</p>
+                  account projects, and training 200+ consultants worldwide. </p>
+                <p>Shared process innovations at US and EMEA industry conferences.</p>
               </div>
               <div class="impact-card glass-card">
                 <div class="impact-icon">📡</div>
@@ -119,8 +120,9 @@
                 <div class="impact-icon">📈</div>
                 <h4>Operational Impact</h4>
                 <p>Drove operational and financial improvements across 22 hospitality venues, increasing gross profit
-                  from 72% to 78% year-on-year. Earned promotion to a head-office analytics role for performance,
-                  efficiency gains, and pragmatic leadership.</p>
+                  from 72% to 78% year-on-year. </p>
+                <p>Earned promotion to a head-office analytics role for performance, efficiency gains, and pragmatic
+                  leadership.</p>
               </div>
             </div>
           </div>
@@ -134,6 +136,18 @@
         <div class="line"></div>
       </div>
       <div class="timeline">
+
+        <div class="timeline-item">
+          <div class="timeline-date">Nov 2023 - present</div>
+          <div class="timeline-content glass-card">
+            <h3>Professional Driver</h3>
+            <h4></h4>
+            <p>Delivered a variety of vehicles—including new cars, lease vehicles, and fleet autos—to customers
+              nationwide while
+              ensuring timely, damage-free deliveries.</p>
+            <p>Achieved a 99% on-time delivery record across 350+ vehicle handovers.</p>
+          </div>
+        </div>
 
         <div class="timeline-item">
           <div class="timeline-date">Aug 2023 - Oct 2025</div>
@@ -252,7 +266,7 @@
           <a href="mailto:timnightingale@gmail.com" class="contact-link">
             <span class="icon">✉️</span> timnightingale@gmail.com
           </a>
-          <a href="https://linkedin.com/in/timnightingale" target="_blank" class="contact-link">
+          <a href="https://linkedin.com/in/1timnightingale" target="_blank" class="contact-link">
             <span class="icon">🔗</span> LinkedIn
           </a>
           <a href="https://techntrek.co.uk" target="_blank" class="contact-link">
